changed test file to match new exception class